--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ requires-python = ">=3.7"
 [project.urls]
 Homepage = "https://github.com/santoshvarmaaddala/"
 Repository = "https://github.com/santoshvarmaaddala/collectins"
+
+[tool.pytest.ini_options]
+pythonpath = "src"
